# stable-which

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/stable-which/: Cargo.toml
crates/stable-which-cli/: Cargo.toml
crates/stable-which-cli/src/: main.rs
crates/stable-which/src/: candidate.rs  lib.rs  path_analysis.rs  version_manager.rs
docs/: ARCHITECTURE.md
docs/decisions/: DR-001-workspace-separation.md  DR-002-tag-based-evaluation.md  DR-003-stability-by-absence.md  DR-004-ephemeral-detection.md  DR-005-shim-detection.md  DR-006-explicit-different-binary.md  DR-007-cli-output-design.md  DR-008-path-order-in-tag.md  DR-009-byte-comparison.md  DR-010-executable-check.md  DR-011-error-type.md  DR-012-cli-improvements.md  DR-013-module-rename.md  DR-014-windows-support.md
docs/reports/: path-patterns.md  service-registration.md
src/: main.rs
