[package]
name = "stable-which"
version = "0.1.0"
edition = "2024"
description = "Resolve the stable PATH entry for a binary, verified by canonical path identity"
license = "MIT"
repository = "https://github.com/kawaz/stable-which"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
